--- a/configs/car-racing-v3.yml
+++ b/configs/car-racing-v3.yml
@@ -1,5 +1,5 @@
 environmentName: CarRacing-v3
-runName: myVersion2
+runName: remadeActor
 seed: 1
 
 # total gradients steps will be iterations * replayRatio
