--- a/configs/car-racing-v3.yml
+++ b/configs/car-racing-v3.yml
@@ -1,5 +1,5 @@
 environmentName: CarRacing-v3
-runName: SheepRL_KL_LOSS
+runName: DV3ActorLoss
 seed: 1
 
 # total gradients steps will be iterations * replayRatio
@@ -11,7 +11,7 @@ checkpointInterval: 2000
 resume: False
 checkpointToLoad: 30k
 
-episodesBeforeStart: 10
+episodesBeforeStart: 1
 numInteractionEpisodes: 1
 numEvaluationEpisodes: 1
 
@@ -37,7 +37,7 @@ dreamer:
     lambda_: 0.95
     betaPrior: 1.0
     betaPosterior: 0.1
-
+    entropyScale: 0.0003
 
     buffer:
         capacity: 50000
